--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.20.13",
+    "@clerk/clerk-expo": "0.19.30",
+    "@clerk/clerk-react": "^4.30.9",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@types/react": "~18.2.45",
     "expo": "~50.0.14",
+    "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-screens": "~3.29.0",
-    "react-native-select-dropdown": "^4.0.0"
+    "react-native-select-dropdown": "^4.0.0",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
